1) Add show toast, hidden boolean value to advancement json files. 2) Add custom icon & meta value to advancement. 3) Remove "remove formatting codes" in title and description because vanilla now supported. 4) Add custom parent node for advancement. 5) Add custom frame type for advancement. 6) Order the advancement list for custom parent node function. 7) Add some values for root advancement customize.

--- a/advanced-achievements-plugin/src/main/resources/config.yml
+++ b/advanced-achievements-plugin/src/main/resources/config.yml
@@ -198,6 +198,12 @@ AllAchievementsReceivedRewards:
 
 # Title shown on the root advancement.
 RootAdvancementTitle: Advanced Achievements
+RootAdvancementDescription: ""
+RootAdvancementIconId: BOOK
+RootAdvancementIconMeta: 0
+# Frame Type can be GOAL, TASK or CHALLENGE
+RootAdvancementFrameType: GOAL
+RootAdvancementShowToast: false
 
 # Background shown on the Advanced Achievements advancement tab.
 # Must be a resource location to any image in a resource pack.
